--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Thu Jul 28 18:00:18 CEST 2011
+#Sat Aug 06 12:13:25 CEST 2011
 app.grails.version=1.3.7
 app.name=cucumber
 plugins.hibernate=1.3.7
+plugins.spock=0.5-groovy-1.7
 plugins.tomcat=1.3.7
