--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Sat Aug 06 12:13:25 CEST 2011
+#Sat Sep 17 10:21:25 CEST 2011
 app.grails.version=1.3.7
 app.name=cucumber
 plugins.hibernate=1.3.7
+plugins.release=1.0.0.RC3
 plugins.spock=0.5-groovy-1.7
 plugins.tomcat=1.3.7
