--- a/test/projects/Books_geb/application.properties
+++ b/test/projects/Books_geb/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
 #Sat Apr 07 22:38:53 CEST 2012
 app.grails.version=2.0.3
-app.name=Books2
+app.name=Books
 app.servlet.version=2.5
 app.version=0.1
