--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: groovy
+
+script: gradle grails-test-app --project-prop arg0=unit:spock
+
 jdk:
   - openjdk6
 
-script: "gradle grails-test-app --project-prop arg0=unit:spock"
