configure travis script, next try

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: groovy
-
-script: gradle grails-test-app --project-prop arg0=unit:spock
+script: 'gradle grails-test-app --project-prop arg0=unit:spock'
 
 jdk:
   - openjdk6
-
