--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: groovy
-script: 'gradle grails-test-app --project-prop arg0=unit:spock'
+
+script: "gradle grails-test-app --project-prop arg0=unit:spock"
 
 jdk:
   - openjdk6
