--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,11 @@ apply plugin: 'grails'
 grails {
   version '2.0.4'
 }
+
+task assemble {
+    println "called assemble!"
+}
+
+task check {
+    println "called check!"
+}
