--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,10 @@ grails {
   version '2.0.4'
 }
 
-task assemble {
+task assemble << {
     println "called assemble!"
 }
 
-task check {
+task check << {
     println "called check!"
 }
