--- a/test/projects/Books_geb/application.properties
+++ b/test/projects/Books_geb/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Tue Jun 05 20:51:23 CEST 2012
-app.grails.version=2.0.4
+#Wed Dec 12 22:30:40 CET 2012
+app.grails.version=2.1.1
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
