--- a/test/projects/Books_geb/application.properties
+++ b/test/projects/Books_geb/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Wed Dec 12 22:30:40 CET 2012
-app.grails.version=2.1.1
+#Sat Jul 13 09:10:20 CEST 2013
+app.grails.version=2.2.3
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
