--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sun Jun 30 17:33:02 CEST 2013
-app.grails.version=2.2.3
+#Sun Sep 15 17:44:41 CEST 2013
+app.grails.version=2.3.0
 app.name=cucumber
-plugins.hibernate=2.2.3
+app.servlet.version=2.5
 plugins.tomcat=2.2.3
