updated to grails 2.2.4.

--- a/test/projects/Books_geb/application.properties
+++ b/test/projects/Books_geb/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Jul 13 09:10:20 CEST 2013
-app.grails.version=2.2.3
+#Mon Dec 16 19:12:35 CET 2013
+app.grails.version=2.2.4
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
