--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sun Jun 30 17:33:02 CEST 2013
-app.grails.version=2.2.3
+#Mon Dec 16 19:06:18 CET 2013
+app.grails.version=2.2.4
 app.name=cucumber
-plugins.hibernate=2.2.3
-plugins.tomcat=2.2.3
+plugins.hibernate=2.2.4
+plugins.tomcat=2.2.4
