--- a/test/projects/Books_compile/application.properties
+++ b/test/projects/Books_compile/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sun Jun 30 17:56:02 CEST 2013
-app.grails.version=2.2.3
+#Mon Dec 16 19:10:46 CET 2013
+app.grails.version=2.2.4
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
