--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,5 @@
 #Grails Metadata file
-#Mon Dec 16 19:06:18 CET 2013
-app.grails.version=2.2.4
+#Sun Dec 29 14:26:49 CET 2013
 app.name=cucumber
-plugins.hibernate=2.2.4
-plugins.tomcat=2.2.4
+app.grails.version=2.3.4
+app.servlet.version=2.5
