upgraded to grails 2.3.7

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sun Dec 29 14:26:49 CET 2013
+#Mon Apr 14 12:57:56 CEST 2014
+app.grails.version=2.3.7
 app.name=cucumber
-app.grails.version=2.3.4
 app.servlet.version=2.5
