upgraded to grails 2.3.7

--- a/test/projects/Books/application.properties
+++ b/test/projects/Books/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Thu Jan 02 12:16:22 CET 2014
-app.grails.version=2.3.4
+#Mon Apr 14 12:59:57 CEST 2014
+app.grails.version=2.3.7
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
