--- a/test/projects/Books_compile/application.properties
+++ b/test/projects/Books_compile/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Mon Dec 16 19:10:46 CET 2013
-app.grails.version=2.2.4
+#Mon Apr 14 14:26:55 CEST 2014
+app.grails.version=2.3.7
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
