upgraded to grails 2.3.7

--- a/test/projects/Books_geb/application.properties
+++ b/test/projects/Books_geb/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Mon Dec 16 19:12:35 CET 2013
-app.grails.version=2.2.4
+#Mon Apr 14 15:17:16 CEST 2014
+app.grails.version=2.3.7
 app.name=Books
 app.servlet.version=2.5
 app.version=0.1
