--- a/test/projects/Books_remote/application.properties
+++ b/test/projects/Books_remote/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Sun Dec 29 17:16:56 CET 2013
-app.grails.version=2.2.4
+#Mon Apr 14 16:33:29 CEST 2014
+app.grails.version=2.3.7
 app.name=Books_remote
+app.servlet.version=2.5
 app.version=0.1
